--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" id="favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jawa Design</title>
+    <meta
+      name="description"
+      content="Découvrez des projets innovants, des designs captivants et des solutions web personnalisées. Plongez dans une expérience immersive où la passion pour le développement web rencontre l'esthétique du design. Rejoignez-nous dès maintenant et laissez-vous inspirer par notre expertise. Venez visiter notre site et laissez-nous vous surprendre !"
+    />
+    <title id="title_link">Jawa Design</title>
   </head>
   <body>
     <div id="root"></div>
